<resources>
    <string name="app_name">PUG</string>
    <string name="pick_up_games">Pick Up Games</string>
    <string name="desc">Working life is a mess</string>
    <string name="cool_stuff">But with PUG it has never been easier to get active</string>
    <string name="get_started">Get Started</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="logout">logout</string>
</resources>